--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,1 +1,16 @@
-<H1>Bienvenido al ahorcado</H1>
+<HTML>
+<head>
+<title>Ahorcado</title>
+</head>
+<body>
+	<Marquee>
+		<H1>Bienvenido al ahorcado</H1>
+	</Marquee>
+
+	<Center>
+		<Form action="seleccionarNivel.html" name="seleccionarNivel">
+			<input type=submit id=jugar value="Nivel">
+		</Form>
+	</Center>
+</body>
+</HTML>
