--- a/src/main/webapp/jugar.html
+++ b/src/main/webapp/jugar.html
@@ -1,3 +1,13 @@
-<Marquee>
-	<H1>Jugar</H1>
-</Marquee>
+<Html>
+<Head>
+<title>Ahorcado: Jugar</title>
+</Head>
+<Body>
+	<Marquee>
+		<H1>Jugar</H1>
+	</Marquee>
+	
+	
+	
+</Body>
+</Html>
