Manejo de diccionario en juego

--- a/src/main/webapp/basico.html
+++ b/src/main/webapp/basico.html
@@ -18,6 +18,7 @@
 				<OPTION VALUE="Peliculas">Peliculas</OPTION>
 				<OPTION VALUE="TV">Programas de TV.</OPTION>
 			</SELECT><br> <br> <input type=submit id=intentalo value="Intentalo">
+			<input type=hidden name=nivel value=1>
 		</Form>
 		<Form action="seleccionarNivel.html" name="volver">
 			<input type=submit id=volver value="Volver">
