--- a/src/main/webapp/dificil.html
+++ b/src/main/webapp/dificil.html
@@ -16,7 +16,8 @@
 				<OPTION VALUE="Paises">Paises</OPTION>
 				<OPTION VALUE="Peliculas">Peliculas</OPTION>
 				<OPTION VALUE="TV">Programas de TV.</OPTION>
-			</SELECT><br>
+			</SELECT>
+			<input type=hidden name=nivel value=3><br>
 			<br> <input type=submit id=intentalo value="Intentalo">
 		</Form>
 		<Form action="seleccionarNivel.html" name="volver">
