--- a/src/main/webapp/basico.html
+++ b/src/main/webapp/basico.html
@@ -11,7 +11,7 @@
 		Este nivel esta diseniado para quellos jugadores que desean<br>
 		aprender a jugar el ahorcado de manera sencilla y <br> con
 		palabras sin mucha complejidad!<br><br><br>
-		<Form action="jugar.html" name="jugarBasico">
+		<Form action="AhorcadoServlet" name="jugarBasico" >
 			Selecciona una categoria de palabras:
 			<SELECT NAME="categoria" SIZE=1>
 				<OPTION VALUE="Paises">Paises</OPTION>
