Servlet Casi Corriendo

--- a/src/main/webapp/basico.html
+++ b/src/main/webapp/basico.html
@@ -10,15 +10,17 @@
 		<h1>Bienvenido al nivel Basico!</h1>
 		Este nivel esta diseniado para quellos jugadores que desean<br>
 		aprender a jugar el ahorcado de manera sencilla y <br> con
-		palabras sin mucha complejidad!<br><br><br>
-		<Form action="AhorcadoServlet" name="jugarBasico" >
-			Selecciona una categoria de palabras:
-			<SELECT NAME="categoria" SIZE=1>
+		palabras sin mucha complejidad!<br>
+		<br>
+		<br>
+		<Form action="AhorcadoServlet" name="jugarBasico">
+			Selecciona una categoria de palabras: <SELECT NAME="categoria" SIZE=1>
 				<OPTION VALUE="Paises">Paises</OPTION>
 				<OPTION VALUE="Peliculas">Peliculas</OPTION>
 				<OPTION VALUE="TV">Programas de TV.</OPTION>
-			</SELECT><br> <br> <input type=submit id=intentalo value="Intentalo">
-			<input type=hidden name=nivel value=1>
+			</SELECT><br> <br> <input type=hidden name=nivel value=1> <input
+				type=submit id=intentalo value="Intentalo">
+
 		</Form>
 		<Form action="seleccionarNivel.html" name="volver">
 			<input type=submit id=volver value="Volver">
