ingresar letra en archivo de texto

--- a/src/main/webapp/basico.html
+++ b/src/main/webapp/basico.html
@@ -13,7 +13,7 @@
 		palabras sin mucha complejidad!<br>
 		<br>
 		<br>
-		<Form action="AhorcadoServlet" name="jugarBasico">
+		<Form action="ingresar_letra.html" name="jugar">
 			Selecciona una categoria de palabras: <SELECT NAME="categoria" SIZE=1>
 				<OPTION VALUE="Paises">Paises</OPTION>
 				<OPTION VALUE="Peliculas">Peliculas</OPTION>
