--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,10 +6,12 @@
 	<Marquee>
 		<H1>Bienvenido al ahorcado</H1>
 	</Marquee>
-
 	<Center>
 		<Form action="seleccionarNivel.html" name="seleccionarNivel">
 			<input type=submit id=jugar value="Nivel">
+		</Form>
+		<Form action="administrador.html" name="admin">
+			<input type=submit id=administrador value="Administrador">
 		</Form>
 	</Center>
 </body>
