Funcionando el juego

--- a/src/main/webapp/basico.html
+++ b/src/main/webapp/basico.html
@@ -4,25 +4,20 @@
 </head>
 <body>
 	<marquee>
-		<h1> Ingresar Letra - Nivel Basico</h1>
+		<h1>Ingresar Letra - Nivel Basico</h1>
 	</marquee>
 	<Center>
 		<h1>Bienvenido al nivel Basico!</h1>
 		Este nivel esta diseniado para quellos jugadores que desean<br>
 		aprender a jugar el ahorcado de manera sencilla y <br> con
-		palabras sin mucha complejidad!<br>
-		<br>
-		<br>
+		palabras sin mucha complejidad!<br> <br> <br>
 		<Form action="AhorcadoServlet" name="jugarBasico">
 			Selecciona una categoria de palabras: <SELECT NAME="categoria" SIZE=1>
 				<OPTION VALUE="Paises">Paises</OPTION>
 				<OPTION VALUE="Peliculas">Peliculas</OPTION>
 				<OPTION VALUE="TV">Programas de TV</OPTION>
-			</SELECT>
-			<br>
-			Ingrese letra:  <input type=text name=letra>
-			<br>
-			<br> <input type=hidden name=nivel value=1>
+			</SELECT> <br> <br> <br> <input type=hidden name=nivel value=1>
+			<input type=hidden name=letra value="">
 			<input type=submit id=intentalo value="Intentalo">
 		</Form>
 		<Form action="seleccionarNivel.html" name="volver">
