--- a/src/main/webapp/basico.html
+++ b/src/main/webapp/basico.html
@@ -17,8 +17,9 @@
 				<OPTION VALUE="Peliculas">Peliculas</OPTION>
 				<OPTION VALUE="TV">Programas de TV</OPTION>
 			</SELECT> <br> <br> <br> <input type=hidden name=nivel value=1>
-			<input type=hidden name=letra value="">
-			<input type=submit id=intentalo value="Intentalo">
+			<input type=hidden name=letra value=""> <input type=hidden
+				name=pista value=""> <input type=submit id=intentalo
+				value="Intentalo">
 		</Form>
 		<Form action="seleccionarNivel.html" name="volver">
 			<input type=submit id=volver value="Volver">
