pedir pista de frase ya implementada y cancelar juego tambien (envia a seleccionar nivel) y refactorizando codigo repetitivo, complicado e inservible

--- a/src/main/webapp/basico.html
+++ b/src/main/webapp/basico.html
@@ -16,10 +16,8 @@
 				<OPTION VALUE="Paises">Paises</OPTION>
 				<OPTION VALUE="Peliculas">Peliculas</OPTION>
 				<OPTION VALUE="TV">Programas de TV</OPTION>
-			</SELECT> <br> <br> <br> <input type=hidden name=nivel value=1>
-			<input type=hidden name=letra value=""> <input type=hidden id="pista"
-				name=pista value="desactivar"> <input type=submit id=intentalo
-				value="Intentalo">
+			</SELECT> <br> <br> <input type=hidden name=nivel value=1>
+			<input type=submit id=intentalo value="Intentalo">
 		</Form>
 		<Form action="seleccionarNivel.html" name="volver">
 			<input type=submit id=volver value="Volver">
