--- a/src/main/webapp/intermedio.html
+++ b/src/main/webapp/intermedio.html
@@ -16,12 +16,9 @@
 				<OPTION VALUE="Paises">Paises</OPTION>
 				<OPTION VALUE="Peliculas">Peliculas</OPTION>
 				<OPTION VALUE="TV">Programas de TV</OPTION>
-			</SELECT>
-			<br>
-			Ingrese letra:  <input type=text name=letra>
-			<br>
-			<br> <input type=submit id=intentalo value="Intentalo">
-		<input type=hidden name=nivel value=2>
+			</SELECT> <br> <input type=hidden name=nivel value=2> <input
+				type=submit id=intentalo value="Intentalo">
+
 		</Form>
 		<Form action="seleccionarNivel.html" name="volver">
 			<input type=submit id=volver value="Volver">
