Interfaces y servlets de login y sign up

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -13,6 +13,12 @@
 		<Form action="administrador.html" name="admin">
 			<input type=submit id=administrador value="Administrador">
 		</Form>
+		<Form action="login.html" name="login">
+			<input type=submit id=login value="Login">
+		</Form>
+		<Form action="signUp.html" name="registrarse">
+			<input type=submit id=registrarse value="Registrarse">
+		</Form>
 	</Center>
 </body>
 </HTML>
