funcionando regristrar y login de usuario aun sin redireccionar imagen y sin puntuaciones, solo un usuario se puede loguear a la vez, se sobreponen las sesiones

--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -9,10 +9,10 @@
 	<Center>
 		<h1>Bienvenido al ahorcado</h1>
 		 Ingrese sus datos de sesion <br> <br> <br>
-		<Form action="LoginServlet" name="login">
+		<Form action="UsersAdminServlet" name="logIn">
 			Nombre de usuario: <input type=text name=username value=""><br>
 			Clave: <input type=password name=password value=""><br>
-			<input type=submit id=Iniciar value="Iniciar Sesion">
+			<input type=submit name=login id=login value="Iniciar Sesion">
 		</Form>
 		<Form action="index.html" name="volver">
 			<input type=submit id=volver value="Volver">
