--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -13,6 +13,11 @@
 		<Form action="administrador.html" name="admin">
 			<input type=submit id=administrador value="Administrador">
 		</Form>
+		
+		<Form action="UsersAdminServlet" name="puntuaciones">
+			<input type=submit id=puntuaciones value="Puntuaciones">
+		</Form>
+		
 		<Form action="login.html" name="login">
 			<input type=submit id=login value="Login">
 		</Form>
