Editar datos de un usuario funcionando

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -24,6 +24,10 @@
 		<Form action="signUp.html" name="registrarse">
 			<input type=submit id=registrarse value="Registrarse">
 		</Form>
+		
+		<Form action="UsersAdminServlet">
+			<input type=submit id=editar name=editar value="EditarDatos">
+		</Form>
 	</Center>
 </body>
 </HTML>
